--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>DeleteUser</servlet-name>
         <servlet-class>controllers.admin.DeleteUser</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GetCustomersList</servlet-name>
+        <servlet-class>controllers.admin.GetCustomersList</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AddUser</servlet-name>
         <url-pattern>/admin/AddUser</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>DeleteUser</servlet-name>
         <url-pattern>/DeleteUser</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetCustomersList</servlet-name>
+        <url-pattern>/GetCustomersList</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
