--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
-        <servlet-name>AddUser</servlet-name>
-        <servlet-class>controllers.AddUser</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>CheckLoginCredentials</servlet-name>
         <servlet-class>controllers.CheckLoginCredentials</servlet-class>
     </servlet>
@@ -44,10 +40,10 @@
         <servlet-name>AddSalesman</servlet-name>
         <servlet-class>controllers.admin.AddSalesman</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>AddUser</servlet-name>
-        <url-pattern>/admin/AddUser</url-pattern>
-    </servlet-mapping>
+    <servlet>
+        <servlet-name>AddUserA</servlet-name>
+        <servlet-class>controllers.admin.AddUser</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CheckLoginCredentials</servlet-name>
         <url-pattern>/CheckLoginCredentials</url-pattern>
@@ -87,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>AddSalesman</servlet-name>
         <url-pattern>/AddSalesman</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddUserA</servlet-name>
+        <url-pattern>/AddUserA</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
