Added HandleManagerRequest servlet. Moved GetManagerRequests to manager package.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     </servlet>
     <servlet>
         <servlet-name>GetManagerRequests</servlet-name>
-        <servlet-class>controllers.GetManagerRequests</servlet-class>
+        <servlet-class>controllers.manager.GetManagerRequests</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>AddCustomer</servlet-name>
