Newsletter function is ready (frontend-backend)

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>DeleteCustomer</servlet-name>
         <servlet-class>controllers.DeleteCustomer</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddEmailToNewsletter</servlet-name>
+        <servlet-class>controllers.internet.AddEmailToNewsletter</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CheckLoginCredentials</servlet-name>
         <url-pattern>/CheckLoginCredentials</url-pattern>
@@ -95,6 +99,10 @@
     <servlet-mapping>
         <servlet-name>DeleteCustomer</servlet-name>
         <url-pattern>/DeleteCustomer</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddEmailToNewsletter</servlet-name>
+        <url-pattern>/AddEmailToNewsletter</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
